Fix spacing issues

--- a/blocks/header/__link-list/header__link-list.css
+++ b/blocks/header/__link-list/header__link-list.css
@@ -2,4 +2,5 @@
   display: flex;
   flex-wrap: nowrap;
   list-style-type: none;
+  margin: 0;
 }
