--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -3,6 +3,11 @@
   color: white;
   font-size: 24px;
   line-height: 28px;
+  transition-delay: .3s;
+}
+
+.header__link:hover {
+  opacity: .8;
 }
 
 @media screen and (max-width: 320px) {
