--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -4,6 +4,7 @@
   font-weight: 400;
   line-height: 14px;
   letter-spacing: .15em;
+  margin: 8px 0 0 0;
 }
 
 @media screen and (max-width: 1023px) {
